fix footer contrast

--- a/html/style/style.css
+++ b/html/style/style.css
@@ -14,7 +14,8 @@
     font-family: Arial, sans-serif;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -71,6 +72,8 @@ header {
 }
 
 footer {
+    color: white;
+
     p > a {
         font-size: x-large;
     }
